# Data_Dump

./: ACQ.xlsx  ACQ_DumpChanges_01_response_comparison_result.csv  Code.txt  ExcelCode.txt  NewCode  NewCodeExcel  PlaywrightCode  PolicyOrder.xlsx  PolicyRules.xlsx  Steps_To_Run.txt  compare  comparison_service  error.txt  query.txt  run.txt  save  unsave
automation/apitesting/: __init__.py  config.json  requirements.txt
automation/apitesting/config/: __init__.py  config.json  settings.py
automation/apitesting/core/: __init__.py
automation/apitesting/scripts/: compare_results.py  merge_reports.py  run_tests.py
automation/apitesting/services/: __init__.py  comparison_service.py  http_service.py  report_service.py  test_data_service.py
automation/apitesting/utils/: __init__.py  file_handler.py  logger.py  validators.py
automation/data/input/templates/regular/: ACQ_DumpChanges_02.json  ACQ_PID_Approve_Business_App_01.json
automation/data/output/comparisons/20251011_002701_vs_20251011_003144/: ACQ_DumpChanges_01_response_comparison_result.csv  ACQ_DumpChanges_02_response_comparison_result.csv  comparison_summary.txt
automation/data/output/comparisons/20251011_002701_vs_20251011_003144/merged_20251011_140435/: ACQ.xlsx  merge_summary.txt
automation/data/output/processed/: ACQ_DumpChanges_01.json  ACQ_DumpChanges_02.json  ACQ_PID_Approve_Business_App_01.json
automation/data/output/reports/20251011_002701/: test_report.html
automation/data/output/reports/20251011_003144/: test_report.html  test_report.json
automation/data/output/responses/20251011_002701/: ACQ_DumpChanges_01_response.json  ACQ_DumpChanges_02_response.json
automation/data/output/responses/20251011_003144/: ACQ_DumpChanges_01_response.json  ACQ_DumpChanges_02_response.json
code/: __init__.py
code/config/: __init__.py  config.json  settings.py
code/core/: __init__.py  constants.py  exceptions.py  models.py
code/data/input/test_data/: RegularTestData.xlsx
code/data/output/comparisons/20251011_002701_vs_20251011_003144/: ACQ_DumpChanges_02_response_comparison_result.csv  comparison_summary.txt
code/data/output/comparisons/20251011_002701_vs_20251011_003144/merged_20251011_003811/: ACQ.xlsx  merge_summary.txt
code/data/output/processed/: ACQ_DumpChanges_01.json  ACQ_DumpChanges_02.json  ACQ_PID_Approve_Business_App_01.json
code/data/output/reports/20251011_002701/: test_report.json  test_report.xlsx
code/data/output/reports/20251011_003144/: test_report.xlsx
code/scripts/: __init__.py  compare_results.py  merge_reports.py  run_tests.py
code/services/: __init__.py  comparison_service.py  http_service.py  report_service.py  test_data_service.py
code/utils/: __init__.py  file_handler.py  logger.py  validators.py
refactored_codebase/: FEATURES_COMPLETE.md  README.md  __init__.py  __main__.py  compare_results.bat  merge_csv.bat  migrate_legacy.py  pyproject.toml  requirements.txt  run_tests.bat  run_tests.py  setup.py
refactored_codebase/cli/: __init__.py  main.py
refactored_codebase/cli/commands/: __init__.py  compare.py  config.py  merge.py  test.py
refactored_codebase/config/: __init__.py  default.json  development.json  models.py  production.json  settings.json  settings.py  testing.json
refactored_codebase/core/: __init__.py  appid_manager.py  config.py  data_manager.py  framework.py  http_client.py  logger.py  run_manager.py  test_executor.py
refactored_codebase/data/templates/fullset_requests/: ACQ_DumpChanges_template.json
refactored_codebase/data/templates/prequal_requests/: Prequal_BureauCall_template.json
refactored_codebase/data/test_data/: app_ids.json  test_scenarios.json
refactored_codebase/data/testdata/: PreQual_MasterTestdata.xlsx
refactored_codebase/services/: __init__.py  comparison_service.py  http_service.py  report_service.py  run_manager.py  test_data_service.py
refactored_codebase/src/api_test_framework/: __init__.py
refactored_codebase/src/api_test_framework/cli/: __init__.py  main.py  utils.py
refactored_codebase/src/api_test_framework/core/: __init__.py  config.py  exceptions.py  logging.py
refactored_codebase/src/api_test_framework/models/: README.md  __init__.py  base.py  request_models.py  response_models.py  test_models.py
refactored_codebase/src/api_test_framework/services/: README.md  __init__.py  comparison_service.py  http_client.py  report_service.py  test_data_service.py
refactored_codebase/src/api_test_framework/utils/: README.md  __init__.py  file_utils.py  helpers.py  id_generator.py  performance.py  validators.py
refactored_codebase/templates/: report_template.html
refactored_codebase/utils/: __init__.py  file_utils.py  json_utils.py  logging.py
refactored_solution/: MasterTestdata.xlsx  PreTestRuner.bat  README.md  __init__.py  api_config.csv  compare_results.bat  csv_merger.py  http_client.py  json_comparator.py  main_runner.py  merge_csv.bat  report_generator.py  requirements.txt  run_manager.py  settings.py  test_data_manager.py
refactored_solution/FullSetRequest/: ACQ_DumpChanges_01.json
refactored_solution/Prequal Request/: Prequal-BureauCall_01.json  Prequal-BureauCall_02.json
refactored_solution/api_client/: http_client.py
refactored_solution/batch_scripts/: run_tests.bat
refactored_solution/comparison/: __init__.py  json_comparator.py
refactored_solution/config/: settings.py
refactored_solution/data_processor/: test_data_manager.py
refactored_solution/reporting/: csv_merger.py  report_generator.py
refactored_solution/utils/: logger.py
